<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.eugene.votetaworkout.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout"
            android:weightSum="1"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true">

        <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/go"
                android:id="@+id/goButton"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/my_workouts"
                android:id="@+id/myWorkoutsButton"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/about"
                android:id="@+id/aboutButton"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="@string/exit"
                android:id="@+id/exitButton"/>

    </LinearLayout>
</RelativeLayout>
